--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "file-loader": "^6.2.0",
     "openai": "^3.1.0",
     "react": "^18.2.0",
-    "react-contenteditable": "^3.3.6",
+    "react-beforeunload": "^2.5.3",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "url-loader": "^4.1.1"
